<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_products" />

        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_barcode"
            android:title="@string/scan" />

        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/import_file" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>
</menu>