<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@color/darkGray"
    android:background="@color/white">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="522dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style = "@style/BarcodeTitle"
            android:text="@string/barcode"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text=""
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp" />

        <TextView
            style = "@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/etBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand_sample"
            android:inputType="textCapWords"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"/>

        <TextView
            android:id="@+id/textView"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/product"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_sample"
            android:inputType="textCapWords"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>