<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:textColor="@color/darkGray"
    android:background="@color/white">

    <ImageView
        android:id="@+id/barcodeImage"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/lastDigit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/darkGray"
        android:background="@color/white"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="@+id/barcodeImage"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/leftHalfDigits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text=""
        android:textSize="16sp"
        android:letterSpacing="0.2"
        android:textAlignment="center"
        android:textColor="@color/darkGray"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toLeftOf="@id/rightHalfDigits"
        app:layout_constraintLeft_toLeftOf="@+id/barcodeImage"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/rightHalfDigits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text=""
        android:textSize="16sp"
        android:letterSpacing="0.2"
        android:textAlignment="center"
        android:textColor="@color/darkGray"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toRightOf="@id/leftHalfDigits"
        app:layout_constraintRight_toRightOf="@+id/barcodeImage"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/firstDigit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/darkGray"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/barcodeImage"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="522dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            style="@style/BarcodeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/barcode" />

        <TextView
            android:id="@+id/tvBarcode"
            style="@style/AText"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="" />

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/brand"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvBrand"
            style="@style/AText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:text="" />

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/product"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvProduct"
            style="@style/AText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:text="" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>